--- a/package.json
+++ b/package.json
@@ -1,26 +1,35 @@
 {
-  "name": "cra-electron",
+  "name": "cra-craco-electron",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.11",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "electron-is-dev": "^2.0.0",
+    "execa": "^6.1.0",
+    "fs-extra": "^11.1.0",
+    "keytar": "^7.9.0",
+    "moment": "^2.29.4",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "request": "^2.88.2",
+    "web-vitals": "^2.1.4",
+    "xml-js": "^1.6.11"
   },
   "scripts": {
+    "postinstall": "electron-builder install-app-deps",
+    "clean": "node env-config/noHomepage.js && rimraf build dist converage src/buildDate.json",
+    "stamp": "node env-config/writeDate.js",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start-electron": "node env-config/edPackage.js && env-cmd -f .env.electron npm start",
+    "build": "npm run clean && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "DON'T eject",
+    "dev": "node env-config/edPackage.js && concurrently --success first \"env-cmd -f .env.electron craco start\" \"wait-on http://localhost:3000 && cross-env NODE_ENV=development electron --trace-warnings .\" -k",
+    "pack": "npm run stamp && node env-config/edPackage.js && env-cmd -f .env.electron craco build -w",
+    "dist": "electron-builder --publish never",
+    "dist-32": "electron-builder --publish never --ia32"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +48,54 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@craco/craco": "^7.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.11",
+    "@types/path-browserify": "^1.0.0",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@types/request": "^2.48.8",
+    "concurrently": "^7.6.0",
+    "cross-env": "^7.0.3",
+    "electron": "^22.0.3",
+    "electron-builder": "^23.6.0",
+    "env-cmd": "^10.1.0",
+    "rimraf": "^4.1.1",
+    "typescript": "^4.9.4",
+    "wait-on": "^7.0.1",
+    "write": "^2.0.0"
+  },
+  "author": {
+    "name": "SIL International",
+    "email": "info@sil.org",
+    "url": "http://sil.org"
+  },
+  "build": {
+    "appId": "sil.lsdev.cra-craco-electron",
+    "productName": "CRA Craco Electron",
+    "copyright": "Copyright © 2020-2023 ${author}",
+    "win": {
+      "icon": "public/icon.png"
+    },
+    "linux": {
+      "icon": "debian/cra-craco-electron.png",
+      "desktop": "debian/cra-craco-electron.desktop",
+      "target": [
+        "deb"
+      ]
+    },
+    "mac": {
+      "category": "public.app-category.utilities",
+      "icon": "public/icon.png"
+    },
+    "directories": {
+      "buildResources": "assets"
+    },
+    "extraFiles": []
   }
 }
